// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TokenData snapshot w/o token data 1`] = `
<form
  className="pf-v6-c-form"
  noValidate={true}
>
  <div
    className="pf-v6-c-form__group"
  >
    <div
      className="pf-v6-c-form__group-label"
    >
      <label
        className="pf-v6-c-form__label"
        htmlFor="token-data-label"
      >
        <span
          className="pf-v6-c-form__label-text"
        >
          Token
        </span>
      </label>
        
    </div>
    <div
      className="pf-v6-c-form__group-control"
    >
      <span
        className="pf-v6-c-form-control"
      >
        <input
          aria-describedby="token-data-label"
          aria-invalid={false}
          aria-label="Token"
          data-ouia-component-id="OUIA-Generated-TextInputBase-1"
          data-ouia-component-type="PF6/TextInput"
          data-ouia-safe={true}
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Enter a Token"
          required={false}
          type="password"
          value=""
        />
      </span>
    </div>
  </div>
</form>
`;

exports[`TokenData snapshot with token data 1`] = `
<form
  className="pf-v6-c-form"
  noValidate={true}
>
  <div
    className="pf-v6-c-form__group"
  >
    <div
      className="pf-v6-c-form__group-label"
    >
      <label
        className="pf-v6-c-form__label"
        htmlFor="token-data-label"
      >
        <span
          className="pf-v6-c-form__label-text"
        >
          Token
        </span>
      </label>
        
    </div>
    <div
      className="pf-v6-c-form__group-control"
    >
      <span
        className="pf-v6-c-form-control"
      >
        <input
          aria-describedby="token-data-label"
          aria-invalid={false}
          aria-label="Token"
          data-ouia-component-id="OUIA-Generated-TextInputBase-2"
          data-ouia-component-type="PF6/TextInput"
          data-ouia-safe={true}
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Replace Token"
          required={false}
          type="password"
          value=""
        />
      </span>
    </div>
  </div>
</form>
`;
